<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailedView">

    <ImageView
        android:id="@+id/image_close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toBottomOf="@+id/name_repo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_repo"
        app:layout_constraintTop_toTopOf="@+id/name_repo" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:clipToOutline="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_git" />

    <TextView
        android:id="@+id/name_repo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_italic"
        android:text="@string/name_repo"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="17sp"
        android:layout_marginStart="5dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias=".5"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_close"/>

    <ImageView
        android:id="@+id/image_star"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        app:srcCompat="@drawable/ic_star" />

    <TextView
        android:id="@+id/starred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:layout_marginStart="5dp"
        android:text="@string/text_starred"
        app:layout_constraintBottom_toBottomOf="@+id/image_star"
        app:layout_constraintStart_toEndOf="@+id/image_star"
        app:layout_constraintTop_toTopOf="@+id/image_star" />

    <ImageView
        android:id="@+id/image_repo"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/starred"
        app:layout_constraintStart_toEndOf="@+id/starred"
        app:layout_constraintTop_toTopOf="@+id/starred"
        app:srcCompat="@drawable/ic_git__1_" />

    <ImageView
        android:id="@+id/image_calendar"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/fork"
        app:layout_constraintStart_toEndOf="@+id/fork"
        app:layout_constraintTop_toTopOf="@+id/fork"
        app:srcCompat="@drawable/ic_calendar" />

    <TextView
        android:id="@+id/fork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:layout_marginStart="5dp"
        android:text="0 forks"
        app:layout_constraintBottom_toBottomOf="@+id/image_repo"
        app:layout_constraintStart_toEndOf="@+id/image_repo"
        app:layout_constraintTop_toTopOf="@+id/image_repo" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="20 September"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_calendar"
        app:layout_constraintStart_toEndOf="@+id/image_calendar"
        app:layout_constraintTop_toTopOf="@+id/image_calendar" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/black_haze"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fork">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/repository_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:justificationMode="inter_word"
                android:text="@string/description_repo"
                android:textColor="@color/window_black"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/broom"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repository_description" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readme"
                android:textColor="@color/window_black"
                android:fontFamily="@font/open_sans"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view_1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:justificationMode="inter_word"
                android:text="@string/d_readme"
                android:textColor="@color/window_black"
                android:textSize="15sp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>